// pulse - bitdrift's observability proxy
// Copyright Bitdrift, Inc. All rights reserved.
//
// Use of this source code is governed by a source available license that can be found in the
// LICENSE file or at:
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt

syntax = "proto3";
package pulse.internode.v1;

import "pulse/internode/v1/metric.proto";

message PeersComparisonRequest {
}
message PeersComparisonResponse {
  // Ordered list of a peer addresses
  // Servers will include themselves in the list with "self" as the peer
  // All other servers will be the ip + port
  repeated string peer = 1;
}

message LastElidedTimestampRequest {
  string metric = 1;
}
message LastElidedTimestampResponse {
  uint64 timestamp = 1;
}

message InternodeMetricsRequest {
  repeated Metric metrics = 1;
}
message InternodeMetricsResponse {
}

service Internode {
  rpc InternodeMetrics(InternodeMetricsRequest) returns (InternodeMetricsResponse);
  rpc GetPeersComparison(PeersComparisonRequest) returns (PeersComparisonResponse);
  rpc LastElidedTimestamp(LastElidedTimestampRequest) returns (LastElidedTimestampResponse);
}
